# learning-app

./: README.md
backend/: pyproject.toml
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
