[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=3.2.1",
    "fastapi>=0.116.1",
    "ollama>=0.3.3",
    "openai>=1.100.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "svix>=1.74.1",
    "uvicorn>=0.35.0",
]
